--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ CTestTestfile.cmake
 /build/
 
 # CMake
-cmake-build-debug/
-cmake-build-release/
+cmake-build-debug/*
+cmake-build-release/*
 
 #idea
 .idea/
