--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ CTestTestfile.cmake
 # CMake
 cmake-build-debug/*
 cmake-build-release/*
+!/cmake-build-release/.gitkeep
+!/cmake-build-debug/.gitkeep
 
 #idea
 .idea/
