added build folder and updates gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,10 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
-/build/
 
 # CMake
-cmake-build-debug/*
-cmake-build-release/*
+cmake-build-debug/
+cmake-build-release/
 
 #idea
 .idea/
